Partially fixed hero loading